Try if gitpitch knows nicer fonts

--- a/custom.css
+++ b/custom.css
@@ -7,7 +7,7 @@
 }
 
 .reveal h2, .reveal h3 {
-  font-family: sans-serif;
+  font-family: Garamond, "Gill Sans", Futura, sans-serif;
   text-transform: none;
 }
 
